fix(icons): removes icon ruining alignment

--- a/src/tokens/_icons.scss
+++ b/src/tokens/_icons.scss
@@ -4,7 +4,7 @@ $mango-icons-font: "mango-icons";
 
 @font-face {
   font-family: $mango-icons-font;
-  src: url("../assets/font/mango-icons.woff2?dcbcb84464cdbf0c2ff170b8f628ec8b") format("woff2");
+  src: url("../assets/font/mango-icons.woff2?58f3663d98e53907dfdae57df3012ba3") format("woff2");
 }
 
 @mixin use-icon {
@@ -36,11 +36,10 @@ $code: unicode(f104);
 $down-arrow: unicode(f105);
 $info-circle: unicode(f106);
 $left-arrow: unicode(f107);
-$mangoui: unicode(f108);
-$right-arrow: unicode(f109);
-$sparkle: unicode(f10a);
-$up-arrow: unicode(f10b);
-$warning: unicode(f10c);
+$right-arrow: unicode(f108);
+$sparkle: unicode(f109);
+$up-arrow: unicode(f10a);
+$warning: unicode(f10b);
 $down-arrow-source: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='64' height='64' viewBox='0 0 64 64'%3E%3Cg fill='none'%3E%3Cpath d='M58.895 23.552a3.5 3.5 0 0 0-4.79-5.104l4.79 5.104zM32 44l-2.395 2.552a3.5 3.5 0 0 0 4.79 0L32 44zM9.896 18.448a3.5 3.5 0 0 0-4.792 5.104l4.792-5.104zm44.209 0l-24.5 23 4.79 5.104 24.5-23-4.79-5.104zm-49 5.104l24.5 23 4.79-5.104-24.5-23-4.79 5.104z' fill='%23212121'%3E%3C/path%3E%3C/g%3E%3C/svg%3E");
 
 
@@ -65,9 +64,6 @@ $down-arrow-source: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000
 }
 .icon.icon-left-arrow:before {
   content: $left-arrow;
-}
-.icon.icon-mangoui:before {
-  content: $mangoui;
 }
 .icon.icon-right-arrow:before {
   content: $right-arrow;
